--- a/index.html
+++ b/index.html
@@ -1,63 +1,91 @@
 <!DOCTYPE html>
 <html>
+
 <head>
    <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Ohmyfood commande restaurants à Paris</title>
    <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 
 <body class="mobilefirst">
-    <!-- container logo & CTA -->
-   <header class="logo">
-           <img class="img__logo" src="./images/logo/ohmyfood.png" alt="Logo de ohmyfood">                   
+   <!-- container logo & CTA -->
+   <header>
+      <section class="logo">
+         <img class="img__logo" src="./images/logo/ohmyfood.png" alt="Logo de ohmyfood">
+         <div class="buttonsearch">
             <form action="" method="get">
-              <button class="button__form" ><i class="fa-sharp fa-solid fa-location-dot" style="color: #000000;"></i></button> <label
-               for="paris"></label>
-              <input class="button__logo--text" type="text" name="paris" id="paris" placeholder="Paris, Belleville"/>
+               <button class="button__icon" type="submit"><i class="fas fa-map-marker-alt fa fa-xl" style="color: #000000;"></i></button>
+               <input class="button__text" type="text" name="paris" id="paris" placeholder="Paris, Belleville" />
             </form>
-            </div>
-      <h2>Réserver le menu qui vous convient
+         </div>
+      </section>
+   </header>
+   <main>
+      <section class="reservation">     
+      <h2>Réserver le menu qui vous convient</h2>
          <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.
 
          </p>
-         <button>Explorer nos restaurants</button>
-      </h2>
+         <button class="reservbutton">Explorer nos restaurants</button>
+      
+      </section>
    
-   </header>
-   <main>
-       <!-- container_Fonctionnement-->
-   <section class="fonctionnement">
-      <h2>Fonctionnement</h2>
-      <button>Choississez un restaurant</button>
-      <button>composez votre menu</button>
-      <button>Dégustez au restaurant</button>
-   </section>
-    <!-- container_Restaurants -->
-   <section>
-      <h2>restaurants</h2>
-   </section>
-</main> 
-<!-- footer_retroliens -->
+   
+      <!-- container_Fonctionnement-->
+      <section class="fonctionnement">
+         <h2>Fonctionnement</h2>
+         <button>Choississez un restaurant</button>
+         <button>composez votre menu</button>
+         <button>Dégustez au restaurant</button>
+      </section>
+      <!-- container_Restaurants -->
+      <section class="restaurants">
+         <h2>restaurants</h2>
+         <article class="restaurants__card">
+            <img src=".\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant La paalette du gout" />
+            <h3 class="title">La palette du gout</h3>
+            <p>Ménilmontant</p>
+          </article>
+          <article class="restaurants__card">
+            <img src=".\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image du restaurant La note enchantée" />
+            <h3 class="title">La note enchantée</h3>
+            <p>Charonne</p>
+          </article>
+          <article class="restaurants__card">
+            <img src=".\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image du restaurant à la Française" />
+            <h3 class="title">A la Française</h3>
+            <p>Cité rouge</p>
+          </article>
+          <article class="restaurants__card">
+            <img src=".\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image du restaurant Le délice des sens" />
+            <h3 class="title">Le délice des sens</h3>
+            <p>Folie-Méricourt</p>
+          </article>
+          
+      </section>
+   </main>
+   <!-- footer_retroliens -->
    <footer class="footer">
       <h2>Ohmyfood</h2>
       <p>Proposer un restaurant</p>
       <pi>Devenir partenaire</p>
-      <p>Mentions légales</p>
-      <p>Contact</p>
+         <p>Mentions légales</p>
+         <p>Contact</p>
    </footer>
-   
+
 
 </body>
 
-   <section>
+<section>
 
-   </section>
+</section>
 </main>
+
 </html>
