--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +12,6 @@
       crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
-
 <body class="mobilefirst">
    <!-- container logo & CTA -->
    <header>
@@ -30,45 +28,64 @@
    <main>
       <section class="reservation">     
       <h2>Réserver le menu qui vous convient</h2>
-         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.
-
-         </p>
+         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
          <button class="reservbutton">Explorer nos restaurants</button>
-      
       </section>
-   
    
       <!-- container_Fonctionnement-->
       <section class="fonctionnement">
          <h2>Fonctionnement</h2>
-         <button>Choississez un restaurant</button>
-         <button>composez votre menu</button>
-         <button>Dégustez au restaurant</button>
+         <div class="fonctionnement">
+            <form action="" method="get">
+               <button class="fonctionnement__icon" type="submit"><i class="fas fa-map-marker-alt fa fa-xl" style="color: #000000;"></i></button>
+               <input class="card" type="text" name="choose" id="chosse" placeholder="Choississez un restaurant" />
+            </form>
+         </div>
+         <div class="fonctionnement">
+            <form action="" method="get">
+               <button class="fonction__icon" type="submit"><i class="fas fa-map-marker-alt fa fa-xl" style="color: #000000;"></i></button>
+               <input class="card" type="text" name="menu" id="menu" placeholder="Composez votre menu" />
+            </form>
+         </div>
+         <div class="fonctionnement">
+            <form action="" method="get">
+                     <button class="fonction__icon " type="submit"><i class="fas fa-map-marker-alt fa fa-xl" style="color: #000000;"></i></button>
+                     <input class="card" type="text" name="degust" id="degust" placeholder="Dégustez au restaurant" />
+                  </form>
       </section>
       <!-- container_Restaurants -->
       <section class="restaurants">
+         <div class="title">
          <h2>restaurants</h2>
+      </div>
          <article class="restaurants__card">
-            <img src=".\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant La paalette du gout" />
-            <h3 class="title">La palette du gout</h3>
+            <img src=".\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image du restaurant La palette du gout" />
+            <div class="title">
+            <h3>La palette du gout</h3>
             <p>Ménilmontant</p>
+         </div>
           </article>
           <article class="restaurants__card">
             <img src=".\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image du restaurant La note enchantée" />
-            <h3 class="title">La note enchantée</h3>
+            <div class="title">
+            <h3>La note enchantée</h3>
             <p>Charonne</p>
+         </div>
           </article>
           <article class="restaurants__card">
             <img src=".\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image du restaurant à la Française" />
-            <h3 class="title">A la Française</h3>
+            <div class="title">
+            <h3>A la Française</h3>
             <p>Cité rouge</p>
+         </div>
           </article>
           <article class="restaurants__card">
             <img src=".\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image du restaurant Le délice des sens" />
-            <h3 class="title">Le délice des sens</h3>
+            <div class="title">
+            <h3>Le délice des sens</h3>
             <p>Folie-Méricourt</p>
-          </article>
-          
+         </div>
+          </article>          
       </section>
    </main>
    <!-- footer_retroliens -->
