--- a/index.html
+++ b/index.html
@@ -35,22 +35,21 @@
       <!-- container_Fonctionnement-->
       <section class="fonctionnement">
          <h2>Fonctionnement</h2>
-         <div class="fonctionnement">
+         <div class="card">
             <form action="" method="get">
-               <button class="fonctionnement__icon" type="submit"><i class="fas fa-map-marker-alt fa fa-xl" style="color: #000000;"></i></button>
-               <input class="card" type="text" name="choose" id="chosse" placeholder="Choississez un restaurant" />
+               <button class="fonction__icon"><i class="fas fa-map-marker-alt fa fa-xl" style="color: #000000;">Choississez un restaurant</i> </button>              
+           
             </form>
          </div>
-         <div class="fonctionnement">
-            <form action="" method="get">
-               <button class="fonction__icon" type="submit"><i class="fas fa-map-marker-alt fa fa-xl" style="color: #000000;"></i></button>
-               <input class="card" type="text" name="menu" id="menu" placeholder="Composez votre menu" />
+         <div class="card">
+            <form>
+               <button class="fonction__icon"><i class="fas fa-map-marker-alt fa fa-xl" style="color: #000000;">Composez votre menu</i></button>               
             </form>
          </div>
-         <div class="fonctionnement">
+         <div class="card">
             <form action="" method="get">
-                     <button class="fonction__icon " type="submit"><i class="fas fa-map-marker-alt fa fa-xl" style="color: #000000;"></i></button>
-                     <input class="card" type="text" name="degust" id="degust" placeholder="Dégustez au restaurant" />
+                     <button class="fonction__icon "><i class="fa-solid fa-store fa-xl" style="color: #FF79DA;">Dégustez au restaurant</i></button>
+                     
                   </form>
       </section>
       <!-- container_Restaurants -->
