modif css page gout
modif css page gout

--- a/restaurants/menu_note_enchantee.html
+++ b/restaurants/menu_note_enchantee.html
@@ -19,10 +19,15 @@
    <!-- container logo & CTA -->
    <header>
       <section class="logo">
+         <nav class="navreturn">
+            <a href="../index.html" class="buttonreturn"> <i class="fa-solid fa-arrow-left"></i> </a>
+         </nav>
          <img class="img__logo" src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
          </section>
-         <!-- footer_retroliens -->
-   <footer>
+         
+         
+         <!-- footer_retroliens -->   
+         <footer>
     <h2>ohmyfood</h2>
     <div class="footer__text">
        <div class="icon__text">
