--- a/restaurants/menu_palette_du_gout.html
+++ b/restaurants/menu_palette_du_gout.html
@@ -19,21 +19,88 @@
    <!-- container logo & CTA -->
    <header>
       <section class="logo">
+         <nav class="navreturn">
+            <a href="../index.html" class="buttonreturn"> <i class="fa-solid fa-arrow-left"></i> </a>
+
+         </nav>
          <img class="img__logo" src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
-         </section>
-         <!-- footer_retroliens -->
-   <footer>
-    <h2>ohmyfood</h2>
-    <div class="footer__text">
-       <div class="icon__text">
-          <i class="fa-solid fa-utensils fa-sm"></i>
-          <p>Proposer un restaurant</p>
-       </div>
-       <div class="icon__text icon__text__gap">
-          <i class="fa-solid fa-handshake-angle fa-xs"></i>
-          <p>Devenez partenaire</p>
-       </div>
-       <p>Mentions légales</p>
-       <p><a href="mailto:ohmyfood@gmail.com">Contact</a></p>
-    </div>
- </footer>
+      </section>
+   </header>
+   <main>
+      <div>
+         <img class="background--menu" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            alt="Menu la Palette du gout">
+         <div class="menu">
+            <div class="menu__title">
+               <h1> La Palette du gout</h1>
+            </div>
+            <div class="menu-full">
+               <div class="entree">
+                  <div class="menu__title">
+                     <h2>ENTREES</h2>
+                  </div>            
+                  <div class="section__menu__cards">
+                     <div class="card">
+                        <div class="card-content">
+                           <div class="card-title">
+                              <h3>Fricassée d'escargots</h3>
+                           </div>
+                           <div class="card-texte">
+                              <p>Au piment d'espelette</p>
+                              <p class="price">25€</p>
+                           </div>
+                        </div>
+                     </div>
+                  </div>            
+                  <div class="section__menu__cards">
+                     <div class="card">
+                        <div class="card-content">
+                           <div class="card-title">
+                              <h3>Foie gras de canard mi-cuit</h3>
+                           </div>
+                           <div class="card-texte">
+                              <p>Et ses copeaux de truffe noire</p>
+                              <p class="price">35€</p>
+                           </div>
+                        </div>
+                     </div>
+                  </div>            
+                  <div class="section__menu__cards">
+                     <div class="card">
+                        <div class="card-content">
+                           <div class="card-title">
+                              <h3>Oeuf au plat</h3>
+                           </div>
+                           <div class="card-texte">
+                              <p>Assaisonné à la truffe sur lit de caviar</p>
+                              <p class="price">20€</p>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            
+
+                  <!-- footer_retroliens -->
+                  <footer>
+                     <h2>ohmyfood</h2>
+                     <div class="footer__text">
+                        <div class="icon__text">
+                           <i class="fa-solid fa-utensils fa-sm"></i>
+                           <p>Proposer un restaurant</p>
+                        </div>
+                        <div class="icon__text icon__text__gap">
+                           <i class="fa-solid fa-handshake-angle fa-xs"></i>
+                           <p>Devenez partenaire</p>
+                        </div>
+                        <p>Mentions légales</p>
+                        <p><a href="mailto:ohmyfood@gmail.com">Contact</a></p>
+                     </div>
+                  </footer>
+               </main>
+               </div>
+
+</body>
+
+</html>
