--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -19,6 +19,10 @@
    <!-- container logo & CTA -->
    <header>
       <section class="logo">
+         <nav class="navreturn">
+            <a href="../index.html" class="buttonreturn"> <i class="fa-solid fa-arrow-left"></i> </a>
+
+         </nav>
          <img class="img__logo" src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
          </section>
          <!-- footer_retroliens -->
