modif menu affichage ftp

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
    <!-- container logo & CTA -->
    <header>
       <section class="logo">
-         <img class="img__logo" src="./assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
+         <a href="index.html">
+         <img class="img__logo" src="./assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood"></a>
          <div class="buttonsearch">
             <form class="formsearch" action="" method="get">
                <button class="button__icon" type="submit"><i class="fas fa-map-marker-alt fa fa-xl"
