--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-   <link rel="stylesheet" type="text/css" href="./assets/css/styles.css">
+   <link rel="stylesheet" type="text/css" href="./assets/CSS/styles.css">
    <script src="https://kit.fontawesome.com/65a8893e54.js" crossorigin="anonymous"></script>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -44,7 +44,7 @@
 
       <!-- container_Fonctionnement-->
       <section class="fonctionnement">
-         
+
          <h2>Fonctionnement</h2>
          <div class="fonctionnement__cards">
             <article class="fonctionnement__cards__card">
