modif palette du gout pour validation w3c

--- a/restaurants/menu_palette_du_gout.html
+++ b/restaurants/menu_palette_du_gout.html
@@ -27,7 +27,7 @@
       </section>
    </header>
    <main>
-      <img class="background--menu" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Menu la Palette du gout">
+      <img class="background--menu" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Menu la Palette du goût">
       <section class="menu">
          <div class="menu__title">
             <h1>La Palette du goût</h1>
@@ -95,6 +95,8 @@
                      </div>
                      <span class="price">35€</span>
                      <span class="checkmark"><i class="fa-solid fa-circle-check fa-sm"></i></span>
+                 
+   
                   </article>
                   <article class="dish">
                      <div class="yolo">
@@ -141,11 +143,11 @@
                </div>
             </div>
          </div>
-      </section>
-      <section class="container__btn">
-         <button class="btn__pageversion">Commander</button>
-      </section>
-   </main>
+          </section>
+          <section class="container__btn">
+             <button class="btn__pageversion">Commander</button>
+          </section>
+        </main>
    
    <!-- footer_retroliens -->
    <footer>
